RESOLVED FIXED172497
REGRESSION: API test WebKit2.WKObject is failing
https://bugs.webkit.org/show_bug.cgi?id=172497
Summary REGRESSION: API test WebKit2.WKObject is failing
Tim Horton
Reported 2017-05-23 02:35:58 PDT
REGRESSION: API test WebKit2.WKObject is failing
Attachments
Patch (2.90 KB, patch)
2017-05-23 02:36 PDT, Tim Horton
ggaren: review+
Tim Horton
Comment 1 2017-05-23 02:36:23 PDT
Tim Horton
Comment 2 2017-05-23 02:36:40 PDT
I'm sure I will soon be enlightened as to why this is completely incorrect.
Geoffrey Garen
Comment 3 2017-05-23 07:39:31 PDT
Comment on attachment 310989 [details] Patch r=me
Tim Horton
Comment 4 2017-05-23 11:21:37 PDT
Note You need to log in before you can comment on or make changes to this bug.