REGRESSION: API test WebKit2.WKObject is failing https://bugs.webkit.org/show_bug.cgi?id=172497 <rdar://problem/31694641>

Reviewed by Geoff Garen.

* Shared/Cocoa/WKNSString.mm:
(-[WKNSString superclass]):
(-[WKNSString class]):
Pretend to be NSString instead of the more specific subclass (__NSCFString)
that we actually are. There is code underneath us that assumes that if
-class returns __NSCFString, that the object is a CFStringRef, which is
not true in our case.

* TestWebKitAPI/Tests/WebKit2Cocoa/WKObject.mm:
(TestWebKitAPI::TEST):
Add a test that ensures that we pretend to at least be *some* kind of
NSString, which my first fix would not have passed.


Canonical link: https://commits.webkit.org/189405@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@217283 268f45cc-cd09-0410-ab3c-d52691b4dbfc